k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      name: nodejs-pod
      labels:
        app: nodejs
        app.kubernetes.io/name: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: nodejs-backend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: backend-port
