k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app.kubernetes.io/name: nodejs-app
  ports:
  - name: backend-svc-port
    protocol: TCP
    port: 80
    targetPort: backend-port
